--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,8 @@
 
     "license": "MIT",
     "require": {
-        "php": ">=7.1.0",
-        "laravel/framework": "5.*"
+        "php": ">=7.1.0"
+      
     },
     "require-dev": {
 
